--- a/src/components/feedback/Toast/styles.module.css
+++ b/src/components/feedback/Toast/styles.module.css
@@ -1,10 +1,13 @@
 .toastList {
-  position: absolute;
-  right: 10px;
-  bottom: 50px;
+  position: fixed;
+  top: 100px;
+  right: 20px;
+  z-index: 9999;
   width: 400px;
-
   overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .toastList:empty {
